--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Policia Local</string>
-    <string name="title_activity_gestion">GestionActivity</string>
+    <string name="app_name">Policia Local Usuario</string>
+    <string name="title_activity_gestion">Gestion de deuncias</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="exit_app">SALIR DE LA APLICACIÓN</string>
